traversal.diagonal.traversaldiagonal.TraversalDiagonal.scala.error
Compilation error:
TraversalDiagonal:15: error: ';' expected but 'while' found.
    }while((x<6)&&(y<6))
     ^